<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/nav_home_transporter"
        android:title="@string/home_in_bottom_bar"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/nav_history_transporter"
        android:title="@string/reservation_in_bottom_bar"
        android:icon="@drawable/ic_history"/>

    <item android:id="@+id/nav_track"
        android:title="@string/track_in_bottom_bar"
        android:icon="@drawable/ic_location"/>

    <item android:id="@+id/nav_notifications_transporter"
        android:title="@string/notifications_in_bottom_bar"
        android:icon="@drawable/ic_notifications"/>

    <item android:id="@+id/nav_profile_transporter"
        android:title="@string/profile_in_bottom_bar"
        android:icon="@drawable/ic_profile"/>

</menu>