<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/nav_home_transporter"
        android:title="@string/home_in_bottom_bar_transporter"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/nav_history_transporter"
        android:title="@string/requests_in_bottom_bar_transporter"
        android:icon="@drawable/ic_history"/>

    <item android:id="@+id/nav_add_service_transporter"
        android:title="@string/new_service_in_bottom_bar_transporter"
        android:icon="@drawable/ic_add"/>

    <item android:id="@+id/nav_notifications_transporter"
        android:title="@string/notifications_in_bottom_bar_transporter"
        android:icon="@drawable/ic_notifications"/>

    <item android:id="@+id/nav_profile_transporter"
        android:title="@string/profile_in_bottom_bar_transporter"
        android:icon="@drawable/ic_profile"/>

</menu>