<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_selver"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageInListViewMainPageCollectionPoints"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:src="@drawable/collection_point_img"/>

    <LinearLayout
        android:id="@+id/pathLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageInListViewMainPageCollectionPoints"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameCollectionPointInListViewMainPageCollectionPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_point"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manageBtnInListViewMainPageCollectionPointProvider"
        style="@android:style/Widget.Button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/details_btn_in_card_customer_recycler_view"
        android:text="@string/manage_btn_in_home_list_view_collection_point"
        android:textColor="@color/light_selver"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_below="@+id/pathLinearLayout"
        android:layout_toEndOf="@+id/imageInListViewMainPageCollectionPoints"
        android:layout_marginTop="5dp" />

</RelativeLayout>